
cmake_minimum_required(VERSION 3.16)
project(CHIP8)

# set the output directory for built objects.
# This makes sure that the dynamic library goes into the build directory automatically.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")


# This assumes the SDL source is available in vendored/SDL
add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

# Create your game executable target as usual
add_executable(CHIP8 main.cpp)

# C source files
target_sources(CHIP8 PRIVATE
    display.h
    memory.h
)
# Link to the actual SDL3 library.
target_link_libraries(CHIP8 PRIVATE SDL3::SDL3)